browse cards alignment issues for mobile

--- a/client/main.scss
+++ b/client/main.scss
@@ -1,6 +1,6 @@
 
 //Variables
-$leafii-theme: #3edeaa !important;
+$leafii-theme: #3edeaa;
 
 //Import all css files
 @import '../imports/ui/components/landing/landing.scss';
@@ -9,3 +9,4 @@ $leafii-theme: #3edeaa !important;
 @import '../imports/ui/components/navigation/navBar.scss';
 @import '../imports/ui/components/profile/profile.scss';
 @import '../imports/ui/components/welcome/welcome.scss';
+@import '../imports/ui/components/userBrowse/userBrowse.scss';
